--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "axios-auth-refresh": "^3.2.1",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
