--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-notifications-component": "^3.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
