--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,5 @@ Django==3.2.9
 django_filter==21.1
 djangorestframework==3.12.4
 djangorestframework_simplejwt==5.0.0
+django-cors-headers==3.10.0
 Pillow==8.4.0
